# mini-crossword

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  exploration.ipynb  main.py  pyproject.toml
src/: config.py  llm_utils.py  loader.py  models.py  utils.py
src/crossword/: crossword_builder.py  hint_generator.py  word_picker.py
