[project]
name = "mini-crossword"
version = "0.1.0"
description = ""
authors = [
    {name = "tanfunan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (==0.115.11)",
    "loguru (==0.7.3)",
    "mangum (==0.19.0)",
    "numpy (==2.2.3)",
    "openai (==1.66.3)",
    "pydantic (==2.10.4)",
    "pydantic-settings (==2.8.1)",
    "pydantic-core (==2.27.2)",
    "python-dotenv (==1.0.1)",
    "tenacity (==8.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
